<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Navigation drawer strings -->
    <string name="drawer_subtitle">Active service:</string>
    <string name="drawer_title">M-Pin Connect&#8230;</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_closed">Drawer Closed</string>
    <string name="change_identitiy">Change Identity</string>
    <string name="change_service">Change Service</string>
    <string name="about">About</string>
    <!-- Navigation drawer strings end -->
    <!-- Toobar titles -->
    <string name="select_identity_title">Select Identity</string>
    <string name="change_identity_title">Change Identity</string>
    <string name="identity_created_title">Identity Created</string>
    <string name="add_identity_title">Add Identity</string>
    <string name="confirm_email_title">Confirm Email</string>
    <string name="access_number_title">Enter Access Number</string>
    <string name="otp_title">One Time Password</string>
    <string name="select_service_title">Select Service</string>
    <string name="account_summary">Account Summary</string>
    <!-- Toobar titles end -->


    <!-- Menu titles -->
    <string name="select_user">Select User</string>
    <string name="reset_pin">Reset Pin</string>
    <string name="delete_user">Delete</string>
    <string name="select_config">Select Configuration</string>
    <!-- Menu titles end -->

    <string name="add_identity_button">Add an identity</string>
    <string name="app_name">CertiVox M-Pin</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading</string>

    <!-- Add Identity -->
    <string name="enter_mail_title">Email address:</string>
    <string name="device_name_title">Device name:</string>
    <string name="create_identity">Create Identity</string>
    <!-- Add Identity end -->


    <!-- Confirm Email -->
    <string name="confirm_new_identitiy">We have sent you an email to: %1$s \n Click the link in the email, to confirm your identity and proceed.</string>
    <string name="email_confirmed_button">I confirmed my email, continue</string>
    <string name="resend_email_button">Resend email</string>
    <string name="back_button">GO TO THE IDENTITIES LIST</string>
    <!-- Confirm Email End -->


    <!-- Identity Created -->
    <string name="identity_created">Congratulations! Your M-Pin identity: %1$s has been set up successfully.</string>
    <string name="sign_in_button">Sign in with this identity</string>
    <!-- Identity Created End -->


    <!-- Access number -->
    <string name="access_number_text">Enter the 7-digit Access Number</string>
    <string name="access_number_info">You can find the Access Number on the Online Banking login page.</string>
    <!-- Access number end -->


    <!-- OTP -->
    <string name="otp_title_label">One-Time Password</string>
    <string name="otp_info_label">You can now use this password to log in to your VPN service.</string>
    <!-- OTP end -->

    <string name="logout">Logout</string>

</resources>