<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <ImageView
        android:id="@+id/user_avatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/user_avatar"
        android:src="@drawable/ic_avatar_big" />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_avatar"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/info_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_email"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/confirm_new_identitiy"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/email_confirmed_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_selector"
            android:text="@string/email_confirmed_button"
            android:textColor="@color/button_selector_textcolor" />

        <Button
            android:id="@+id/resend_email_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_selector"
            android:text="@string/resend_email_button"
            android:textColor="@color/button_selector_textcolor" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector"
            android:text="@string/back_button" 
            android:textColor="@color/button_selector_textcolor"/>
    </LinearLayout>

</RelativeLayout>