<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp" >

    <ImageView
        android:id="@+id/user_avatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/user_avatar"
        android:src="@drawable/ic_avatar_big" />

    <TextView
        android:id="@+id/enter_mail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_avatar"
        android:layout_marginTop="20dp"
        android:text="@string/enter_mail_title"
        android:textColor="@color/green"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_mail_title"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/device_name_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_input"
        android:layout_marginTop="20dp"
        android:text="@string/device_name_title"
        android:textColor="@color/green"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/device_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/device_name_title"
        android:inputType="text" />

    <Button
        android:id="@+id/create_identity_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_selector"
        android:text="@string/create_identity"
        android:textColor="@color/button_selector_textcolor" />

</RelativeLayout>